2008-03-03  dave

	* [r33] t/anon.t, t/arr_str_xform.t, t/basic.t, t/code_xform.t,
	  t/hash_xform.t, t/package.t, t/packages.t, t/ref.t,
	  t/str_choose.t, t/str_xform.t: Use Test::More in preference to
	  Test::Simple in all cases.
	  Remove nasty prehistoric testing scaffolding.
	* [r32] lib/Symbol/Approx/Sub.pm: Add LICENSE to docs.
	  Remove old cvs logs.
	* [r31] Build.PL, Makefile.PL: Switch from Makefile.PL to Build.PL
	* [r30] MANIFEST, Sub.pm, lib/Symbol/Approx/Sub.pm: Moved Sub.pm
	  into lib/
	* [r29] Sub.pm, lib/Symbol/Approx/Sub/Random.pm,
	  lib/Symbol/Approx/Sub/String/Approx.pm,
	  lib/Symbol/Approx/Sub/String/Equal.pm,
	  lib/Symbol/Approx/Sub/Text/Metaphone.pm,
	  lib/Symbol/Approx/Sub/Text/Soundex.pm: Require 5.6.0 so we can
	  use warnings and our.
	* [r28] Makefile.PL: Moved version to Makefile.PL
	* [r27] t/arr_xform.t: Even better fix to test
	* [r26] Sub.pm, lib/Symbol/Approx/Sub/Random.pm,
	  lib/Symbol/Approx/Sub/String/Approx.pm,
	  lib/Symbol/Approx/Sub/String/Equal.pm,
	  lib/Symbol/Approx/Sub/Text/Metaphone.pm,
	  lib/Symbol/Approx/Sub/Text/Soundex.pm: Fixed to use svn revision
	  numbers

2005-10-22  dave

	* [r24] t/arr_xform.t: Fixed broken test.
	* [r23] lib/Symbol/Approx/Sub/Random.pm,
	  lib/Symbol/Approx/Sub/String/Approx.pm,
	  lib/Symbol/Approx/Sub/String/Equal.pm,
	  lib/Symbol/Approx/Sub/Text/Metaphone.pm,
	  lib/Symbol/Approx/Sub/Text/Soundex.pm: Added docs.
	* [r22] Sub.pm: Added test files
	* [r21] t/code_xform.t: fixed broken test.

2005-10-01  dave

	* [r20] MANIFEST, t/pod.t, t/pod_coverage.t: Added pod tests

2004-10-30  dave

	* [r19] MANIFEST: Corrected MANIFEST
	* [r18] MANIFEST: Added new test files
	* [r17] t/arr_str_xform.t, t/arr_xform.t, t/code_xform.t,
	  t/hash_xform.t, t/str_choose.t, t/str_xform.t: Added new tests
	* [r16] Sub.pm: Improvements to test coverage

2004-10-23  dave

	* [r15] COPYING: Licence file

2004-05-12  dave

	* [r14] MANIFEST, Makefile.PL: Added MANIFEST and Makefile.PL to
	  cvs
