@@ -8,6 +8,7 @@ lib/Symbol/Approx/Sub.pm
 Changes
 COPYING
 Makefile.PL
+Build.PL
 MANIFEST
 META.yml                                 Module meta-data (added by MakeMaker)
 t/anon.t
